--- a/src/components/myLoader/style.scss
+++ b/src/components/myLoader/style.scss
@@ -20,7 +20,8 @@
   }
 }
 
-.skeleton__wrapper{
+
+.product__skeletonWrapper{
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -28,27 +29,29 @@
   margin: 16px auto;
   border: 8px solid $backgroundProducts;
   border-radius: 12px;
-  width: 930px;
+  width: 100%;
   height: 312px;
   gap: 8px;
   animation: skeleton-loadingFrame 2s infinite linear alternate;
   opacity: 0.5;
+  padding: 16px;
 
   .skeleton__image{
-    width: 360px;
+    width: 50%;
     height: 225px;
     background: $backgroundProducts;
     animation: skeleton-loading 2s infinite linear alternate;
   }
 
   .skeleton__textWrapper{
+    width: 50%;
     height: 225px;
     display: flex;
     flex-direction: column;
     gap: 16px;
 
     .skeleton__header{
-      width: 450px;
+      width: 100%;
       height: 40px;
       background: $backgroundProducts;
       animation: skeleton-loading 2s infinite linear alternate;
@@ -56,7 +59,7 @@
     }
 
     .skeleton__description{
-      width: 450px;
+      width: 100%;
       height: 40px;
       background: $backgroundProducts;
       animation: skeleton-loading 2s infinite linear alternate;
@@ -64,5 +67,20 @@
   }
 }
 
+@media (min-width: 640px){
+  .wrapper{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .skeleton__wrapper{
+    width: 70%;
+  }
+
+  .product__skeletonWrapper{
+    width: 60%;
+  }
+}
 
 
